@@ -39,8 +39,7 @@
                <pi:ContactURI>tel:+1-201-555-0123</pi:ContactURI>
                <pi:Language>EN</pi:Language>
                <pi:DataProviderContact xmlns="urn:ietf:params:xml:ns:vcard-4.0">
-                   <vcards>
-                     <vcard>
+                   <vcard>
                        <fn><text>Hannes Tschofenig</text></fn>
                        <n>
                            <surname>Hannes</surname>
@@ -117,8 +116,7 @@
                            </parameters>
                            <uri>http://www.tschofenig.priv.at</uri>
                        </url>
-                     </vcard>
-                   </vcards>
+                   </vcard>
                </pi:DataProviderContact>
            </pi:EmergencyCallData.ProviderInfo>
           </ad:EmergencyCallDataValue>
