@@ -1,4 +1,8 @@
 
+Version Next
+
+    - Updated ECRIT to no longer nest <vard> within <vcards>
+
 Version 1.0.105 Released November 16, 2014
 
     - Updated ECRIT to nest <vard> within <vcards>
